--- a/FitnessTracker.V1/Pages/PrincipalPage/Analyse2.razor
+++ b/FitnessTracker.V1/Pages/PrincipalPage/Analyse2.razor
@@ -7,6 +7,11 @@
 @inject GamificationDbService GamificationDbService
 @inject ProfileService profileService
 @inject SupabaseService2 SupabaseService
+@inject Supabase.Client Supabase
+
+
+
+
 <div class="app-main">
     <div class="section-header d-flex justify-content-between align-items-center">
         📊 Statistiques
@@ -86,6 +91,7 @@
     private List<PoidsEntry> entries = new();
     private GamificationDbModel? gamificationDbModel;
     UserProfile profile = new();
+    private SportProfileModel sportProfileModel = new();
 
     protected override async Task OnInitializedAsync()
     {
@@ -96,6 +102,9 @@
         Console.WriteLine($"✅ Analyse loaded entries : {entries.Count}");
         gamificationDbModel = await GamificationDbService.GetOrCreateGamificationAsync();
         profile = await profileService.GetOrCreateUserProfileAsync();
+        sportProfileModel = await GetSportProfile();
+
+
     }
 
     private int getNbStreakDay()
@@ -142,11 +151,25 @@
 
     public static double CalculerCalories(int dureeMinutes, double met, double poidsKg)
     {
-        
+
         double calories = dureeMinutes * met * poidsKg * 0.0175;
         return Math.Round(calories, 1); // arrondi à une décimale
     }
 
+    private async Task<SportProfileModel> GetSportProfile()
+    {
+        var user = SupabaseService.GetCurrentUserId();
 
+        var results = await Supabase
+                .From<SportProfileModel>()
+                .Where(x => x.Id == user)
+                .Get();
+
+        var profile = results.Models.FirstOrDefault();
+
+
+        return profile;
+
+    }
 
 }
