--- a/FitnessTracker.V1/wwwroot/css/monprofil.css
+++ b/FitnessTracker.V1/wwwroot/css/monprofil.css
@@ -1,6 +1,6 @@
 ﻿.monprofil-header {
     height: 80px;
-    background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+    background: radial-gradient(circle, #f5576c 0%, #ffffff 100%);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -135,6 +135,7 @@
     color: #2b2d42;
     margin-bottom: 8px;
     display: block;
+    font-weight : bold;
 }
 
 .monprofil-form-input,
